<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_booking"
            android:title="@string/title1"
            android:icon="@drawable/ic_baseline_home_24"/>

        <item
            android:id="@+id/nav_route"
            android:title="@string/title2"
            android:icon="@drawable/ic_baseline_route_24"/>

        <item
            android:id="@+id/nav_track"
            android:title="@string/title4"
            android:icon="@drawable/ic_baseline_location_on_24"/>

        <item
            android:id="@+id/nav_schedule"
            android:title="@string/title3"
            android:icon="@drawable/ic_baseline_schedule_24"/>

        <item
            android:id="@+id/nav_scan"
            android:title="@string/title5"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"/>

        <item
            android:id="@+id/nav_eContact"
            android:icon="@drawable/ic_baseline_phone_24"
            android:title="@string/title6" />

        <item
            android:id="@+id/nav_signout"
            android:title="@string/title7"
            android:icon="@drawable/ic_baseline_logout_24"/>

    </group>

</menu>