<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:transitionName="logo_image"
        android:layout_marginTop="30dp"
        android:src="@drawable/bus_splash_transparent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:transitionName="logo_text"
        android:textColor="#000"
        android:fontFamily="@font/bungee_regular"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_passenger"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/black"
                android:text="@string/userType1"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_baseline_emoji_people_24"
                android:drawableTint="#FFD752" />

            <Button
                android:id="@+id/btn_driver"
                android:layout_width="125dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/non_selected"
                android:text="@string/userType2"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_baseline_directions_bus_24"
                android:drawableTint="#FFD752"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/go"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:onClick="login"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>