<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Driver.BusStatusUpdate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="3dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/toolbar_background">

        <ImageView
            android:id="@+id/driver_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:text="@string/pageTitle"
                android:fontFamily="@font/cantora_one"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/driver_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Route 1"
                android:fontFamily="@font/cantora_one"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/signOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_logout_24"
            app:tint="@color/black" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:elevation="3dp"
        android:background="@drawable/card_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/messageTitle"
            android:fontFamily="@font/cantora_one"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RadioButton
                android:id="@+id/RadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/busStatus1"
                android:fontFamily="@font/cantora_one"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <RadioButton
                android:id="@+id/RadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/busStatus2"
                android:fontFamily="@font/cantora_one"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <RadioButton
                android:id="@+id/RadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/busStatus3"
                android:fontFamily="@font/cantora_one"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stopTrack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/stopBtn"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/cantora_one"
            app:cornerRadius="20dp"/>

    </LinearLayout>

</LinearLayout>