<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DriverActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="3dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/toolbar_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/mainPageTitle"
                android:fontFamily="@font/cantora_one"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universityName"
                android:fontFamily="@font/cantora_one"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/signOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_baseline_logout_24"
            app:tint="@color/black" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0D000000"
                android:padding="20dp">

                <TextView
                    android:id="@+id/current_dateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:text="Today's date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/driver_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/workMessage"
                android:textSize="18sp"
                android:textColor="#ff0000"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/routeD_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/baloo"
                android:text="@string/dailyRoute"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView_driver"/>

            <TextView
                android:id="@+id/routeS_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:fontFamily="@font/baloo"
                android:text="@string/specialRoute"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView_driver2"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>